[package]
name = "pingcrm"
version = "0.1.0"
edition = "2021"

[dependencies]
indoc = "2.0.3"
sha256 = "1.3.0"
anyhow = "1.0.72"
tracing = "0.1.37"
mime_guess = "2.0.4"
thiserror = "1.0.44"
async-trait = "0.1.73"
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["full"] }
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0.183", features = ["derive"] }
rust-embed = { version = "6.8.1", features = ["axum"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
